Agentic-mode reruns, real fixes, and documentation cleanup
Re-ran all three scenarios end-to-end under --mode=agentic via the
real /sdlc-launcher skill (genuine Agent-tool subagent dispatch for
every judgment phase, not narrated):

- url-shortener-core (greenfield, role=greenfield): STEP-0 -> COMPLETE.
  ux-prototype no longer fires unconditionally for greenfield -- it's
  now gated on the stack declaring a frontend layer (java-spring never
  does), so this run stays API/service-only as the assignment scopes
  it. A real parallel-explorer fork (3 concurrent subagents) ran the
  short-code generation strategy design; one candidate self-disqualified
  on its own real collision-probability analysis.

- url-shortener-bulk-shorten (brownfield, role=services-mod):
  PRE-WORK entered directly against the real codebase. Added
  POST /api/v1/links/batch (BulkLinkOrchestrator, per-item outcomes,
  no cross-item rollback) plus a dedicated BatchRateLimitInterceptor.
  generator caught its own sprint-plan mistake before writing code
  (would have made the service layer import an api-layer DTO) and
  self-corrected, logged transparently.

- url-shortener-analytics-reliability (ambiguous, filed services-doc,
  expanded to services-mod at Gate 1 via EXPAND_LANES):
  posture-feasibility flagged the filed doc-only posture as a MISMATCH
  against the raw request's own wording. Fix: isolate the click-write
  in LinkService.redirectAndRecordClick with saveAndFlush + try/catch
  (saveAndFlush, not save, so the catch actually intercepts the
  physical INSERT rather than a deferred commit-time write).

Real bugs found and fixed along the way:
- H2FileModeDurabilityTest: SpringApplicationBuilder.properties(...)
  sets the LOWEST-priority property source, so a @TempDir override
  never took effect and the test silently hit the shared production
  H2 file. Fixed by switching to .run(String...) command-line args
  (highest precedence). Verified with repeated mvn clean test runs.
- HttpServletR